--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: student-tracker-backend
     runtime: python3
     buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
+    startCommand: python -m uvicorn main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: MONGODB_ATLAS_URL
         fromSecret: mongodb-atlas-url
