--- a/render.yaml
+++ b/render.yaml
@@ -26,4 +26,4 @@ services:
     staticPublishPath: frontend/dist
     envVars:
       - key: VITE_API_BASE_URL
-        value: https://student-tracker-backend.onrender.com/api
+        value: https://student-alert-generator1.onrender.com
