--- a/render.yaml
+++ b/render.yaml
@@ -16,7 +16,7 @@ services:
       - key: DEBUG
         value: false
       - key: ALLOWED_ORIGINS
-        value: https://student-alert-generator1-7.onrender.com
+        value: https://student-alert-generator1-7.onrender.com,http://localhost:3000,http://127.0.0.1:3000
       - key: GOOGLE_API_KEY
         fromSecret: google-api-key
 
